# cpp-linkage-experiments

./: .gitignore  CMakeLists.txt  README.md  check.sh
libhello/include/: hello.h
libhello/src/: hello.cc
libsay/v1/include/: say.h
libsay/v2/include/: say.h
myapp/: main.cc
